# acap-sdk-tools

./: .editorconfig  .gitignore  CODEOWNERS  CONTRIBUTING.md  README.md  config.cfg  main.cpp  match.py  newconfig1.cfg
.github/workflows/: ansible-training.yml  camera-calibration-for-lens-distortion.yml  camera-calibration.yml  example-checks.yml  lint.yml  linter.yml  main-ci.yml  main-cicd.yml  train-tensorflow-model-using-aws.yml
ansible-training/: Dockerfile  README.md  ansible.cfg
ansible-training/inventory/: inventory_aws_ec2.yaml
ansible-training/inventory/group_vars/: vars.yaml
ansible-training/playbooks/: deploy.yaml
camera-calibration/: Dockerfile  README.md  main.cpp
camera-calibration-for-lens-distortion/: CMakeLists-detection.txt  CMakeLists.txt  README.md  config.cfg  main.cpp
camera-calibration-for-lens-distortion/include/: calibration.hpp
camera-calibration-for-lens-distortion/src/: calibration.cpp
camera-calibration/src/: AprilGrid.cpp  calibration.cpp  vis.cpp  writeconfig.cpp
data/vlog42/: imageconfig.cfg
include/: AprilGrid.hpp  calibration.hpp  calibrationtest.hpp  customCalibration.hpp  vis.hpp  writeconfig.hpp
src/: calibration.cpp  calibrationtest.cpp  customCalibration.cpp  writeconfig.cpp
train-tensorflow-model-using-aws/: README.md  ansible.cfg
train-tensorflow-model-using-aws/inventory/: inventory_aws_ec2.yaml
train-tensorflow-model-using-aws/inventory/group_vars/: vars.yaml
train-tensorflow-model-using-aws/playbooks/: deploy.yaml
